<resources>
    <string name="app_name">Calculator</string>
    <string name="a_c">AC</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="secondActivity">Second Activity</string>

    <string name="policies">Policies</string>
    <string name="category">Product Category</string>
    <string name="country">Origin Country</string>
    <string name="brand">Brand</string>
    <string name="current_policies">Current Policies</string>
    <string name="export">Export as CSV</string>
    <string name="country_of_origin">Country Of Origin</string>
    <string name="brave">Brave</string>
    <string name="policy">Policy</string>

</resources>