<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/FrameLayoutHeight"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginHorizontal="@dimen/TextViewMarginHorizontal"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="@dimen/TextViewTextSize" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/second"
        android:text="@string/secondActivity"
        android:onClick="openSecond"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/LinearLayoutPaddingVertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_a_c"
                style="@style/Gray.Button"
                android:text="@string/a_c" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus_minus"
                style="@style/Gray.Button"
                android:layout_marginHorizontal="@dimen/MarginHorizontal"
                android:onClick="onOperationClick"
                android:text="@string/plus_minus" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_percent"
                style="@style/Gray.Button"
                android:layout_marginEnd="@dimen/MarginHorizontal"
                android:onClick="onOperationClick"
                android:text="@string/percent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divide"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/divide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/LinearLayoutPaddingVertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_seven"
                style="@style/Dark.Gray.Button"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_eight"
                style="@style/Dark.Gray.Button"
                android:layout_marginHorizontal="@dimen/MarginHorizontal"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_nine"
                style="@style/Dark.Gray.Button"
                android:layout_marginEnd="@dimen/MarginHorizontal"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/multiply" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_four"
                style="@style/Dark.Gray.Button"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_five"
                style="@style/Dark.Gray.Button"
                android:layout_marginHorizontal="@dimen/MarginHorizontal"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_six"
                style="@style/Dark.Gray.Button"
                android:layout_marginEnd="@dimen/MarginHorizontal"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/LinearLayoutPaddingVertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_one"
                style="@style/Dark.Gray.Button"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_two"
                style="@style/Dark.Gray.Button"
                android:layout_marginHorizontal="@dimen/MarginHorizontal"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_three"
                style="@style/Dark.Gray.Button"
                android:layout_marginEnd="@dimen/MarginHorizontal"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/LinearLayoutPaddingVertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                style="@style/Dark.Gray.Button"
                android:layout_width="@dimen/ButtonZeroWidth"
                android:paddingStart="@dimen/ButtonZeroPaddingStart"
                android:text="@string/zero"
                android:textAlignment="textStart"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_point"
                style="@style/Dark.Gray.Button"
                android:layout_marginHorizontal="@dimen/MarginHorizontal"
                android:text="@string/point" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/equal" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>