<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".homework_screen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/dark_blue"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="@dimen/basicMargin"
            android:src="@drawable/ic_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="@dimen/basicMargin"
            android:src="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="@dimen/basicMargin"
            android:src="@drawable/ic_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/country_of_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="@dimen/basicMargin"
            android:text="@string/country_of_origin"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/country_of_origin" />

        <TextView
            android:id="@+id/product_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginBottom="@dimen/basicMargin"
            android:text="@string/category"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/brave"
            app:layout_constraintStart_toStartOf="@id/country_of_origin" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/product_category" />

        <TextView
            android:id="@+id/brave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basicMargin"
            android:text="@string/brave"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:src="@drawable/ic_dark_gray_circle" />

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:src="@drawable/ic_dark_gray_circle" />

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:src="@drawable/ic_dark_gray_circle" />

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:src="@drawable/ic_gray_circle" />

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:src="@drawable/ic_gray_circle" />

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:src="@drawable/ic_gray_circle" />

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:src="@drawable/ic_gray_circle" />

            <ImageView
                android:layout_marginEnd="@dimen/basicMargin"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:src="@drawable/ic_gray_circle" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/policies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/policies"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/country"
        style="@style/ButtonsSecondActivity"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/country"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/brand"
        style="@style/ButtonsSecondActivity"
        android:text="@string/brand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="@id/brand"
        app:layout_constraintEnd_toEndOf="@id/brand"
        app:layout_constraintTop_toTopOf="@id/brand" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/category"
        style="@style/ButtonsSecondActivity"
        android:text="@string/category"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="@id/category"
        app:layout_constraintEnd_toEndOf="@id/category"
        app:layout_constraintTop_toTopOf="@id/category" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/policy"
        style="@style/ButtonsSecondActivity"
        android:text="@string/policy"
        app:layout_constraintBottom_toTopOf="@id/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="@id/policy"
        app:layout_constraintEnd_toEndOf="@id/policy"
        app:layout_constraintTop_toTopOf="@id/policy" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/export"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/red"
        android:onClick="delete"
        android:padding="@dimen/basicMargin"
        android:text="@string/export"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TextCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/current_policies"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brand" />


</androidx.constraintlayout.widget.ConstraintLayout>